--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.0",
     "nodemon": "^3.1.0"
